.provarCaches/00D6C0000000xA6UAI/objects/sked__Job_Tag__c.object
<CustomObject>
    <fields>
        <fullName>sked__Job__c</fullName>
        <label>Job</label>
        <referenceTo>sked__Job__c</referenceTo>
        <relationshipName>JobTags</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Tag__c</fullName>
        <label>Tag</label>
        <referenceTo>sked__Tag__c</referenceTo>
        <relationshipName>JobTags</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Weighting__c</fullName>
        <description>Weighting to determine how important this Tag is on the job, from 1-3. Ignored if the tag is marked as Mandatory.</description>
        <label>Weighting</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Job Tag</label>
    <nameField>
        <displayFormat>JT_{0}</displayFormat>
        <label>JobTag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sked__Weighting_mutex_not_required</fullName>
        <active>true</active>
        <description>A Job tag must have a weighting if it&apos;s marked as not &apos;required&apos;</description>
        <errorConditionFormula>AND(ISNULL(sked__Weighting__c), NOT(sked__Required__c))</errorConditionFormula>
        <errorDisplayField>sked__Weighting__c</errorDisplayField>
        <errorMessage>A Job tag must have a weighting if it&apos;s marked as not &apos;required&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sked__Weighting_mutex_required</fullName>
        <active>true</active>
        <description>A Job tag cannot have a weighting if it&apos;s marked &apos;required&apos;</description>
        <errorConditionFormula>AND( NOT(ISNULL(sked__Weighting__c)),  sked__Required__c )</errorConditionFormula>
        <errorDisplayField>sked__Weighting__c</errorDisplayField>
        <errorMessage>A Job tag cannot have a weighting if it&apos;s marked &apos;required&apos;</errorMessage>
    </validationRules>
</CustomObject>